--- a/views/admin.html
+++ b/views/admin.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
-    <a class="navbar-brand" href="#">Admin Subastas</a>
+    <a class="navbar-brand" href="home.html">Subastas WCH</a>
     <div class="ms-auto">
       <a href="/home.html" class="btn btn-outline-light me-2">Ir al sitio</a>
       <a href="/logout" class="btn btn-outline-light">Cerrar sesión</a>
