--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-      <a class="navbar-brand" href="#">Subastas WCH</a>
+      <a class="navbar-brand" href="home.html">Subastas WCH</a>
       <div class="ms-auto">
         <a href="/logout" class="btn btn-outline-light">Cerrar sesión</a>
       </div>
