--- a/views/producto.html
+++ b/views/producto.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Detalle del Producto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="/css/style.css" /> -->
+
+
 </head>
 
 <body class="bg-light">
@@ -14,9 +17,9 @@
         <a href="/home.html" class="btn btn-secondary mb-3">&larr; Volver</a>
 
         <div class="card shadow">
-            <div class="card-body">
+            <div class="card-body text-center">
                 <h3 id="nombre" class="card-title text-primary"></h3>
-                <img id="imagen" class="img-fluid my-3 rounded shadow-sm" alt="Imagen del producto"
+                <img id="imagen" class="img-fluid my-3 rounded  shadow-sm" alt="Imagen del producto"
                     style="max-height: 300px;" />
                 <p id="descripcion" class="card-text"></p>
                 <p><strong>Precio base:</strong> $<span id="precio"></span></p>
@@ -26,7 +29,7 @@
                 <form id="formOferta" class="mt-4">
                     <div class="mb-3">
                         <label for="monto" class="form-label">Tu oferta ($):</label>
-                        <input type="number" id="monto" class="form-control" required min="1" />
+                        <input type="number" id="monto" class="form-control" required min="1" placeholder="Ingresa aqui el monto de tu oferta."/>
                     </div>
                     <button type="submit" class="btn btn-success">Ofertar</button>
                     <div id="mensaje" class="mt-3 text-danger"></div>
