--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,7 @@
-  .img-cuadrada {
-      aspect-ratio: 1 / 1;
-      object-fit: cover;
-      object-position: center;
-  }
+.img-cuadrada {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 0.5rem;
+}
