Mas imagenes, agregando carousel mostrandocontroles editando imagenes contain y contador en 48hr

--- a/views/agregar-producto.html
+++ b/views/agregar-producto.html
@@ -31,7 +31,8 @@
       </div>
       <div class="mb-3">
         <label for="imagen" class="form-label">Imagen del producto</label>
-        <input type="file" id="imagen" name="imagen" class="form-control" accept="image/*" />
+        <input type="file" name="imagenes" multiple accept="image/*" class="form-control" />
+        <!-- <input type="file" id="imagen" name="imagen" class="form-control" accept="image/*" /> -->
       </div>
       <button type="submit" class="btn btn-success">Agregar</button>
       <a href="/gestion-productos.html" class="btn btn-secondary ms-2">Volver</a>
