--- a/views/editar-producto.html
+++ b/views/editar-producto.html
@@ -33,7 +33,8 @@
 
       <div class="mb-3">
         <label for="imagen" class="form-label">Nueva imagen (opcional)</label>
-        <input type="file" id="imagen" name="imagen" class="form-control" accept="image/*" />
+        <input type="file" name="imagenes" multiple accept="image/*" class="form-control" />
+        <!-- <input type="file" id="imagen" name="imagen" class="form-control" accept="image/*" /> -->
       </div>
 
       <button type="submit" class="btn btn-primary">Guardar cambios</button>
