--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,40 @@
 .img-cuadrada {
   width: 100%;
-  height: 200px;
+  aspect-ratio: 1 / 1;
   object-fit: cover;
   object-position: center;
   border-radius: 0.5rem;
+}
+.card-altura-fija {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-altura-fija .card-body {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-altura-fija img {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 0.5rem;
+}
+
+.card-altura-fija .card-text {
+  flex-grow: 1;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  background-color: transparent;
+  filter: invert(27%) sepia(94%) saturate(749%) hue-rotate(182deg) brightness(93%) contrast(85%);
+}
+/* Reconocer los saltos de linea de descripcion */
+.descripcion-con-saltos {
+  white-space: pre-line;
 }
