--- a/views/home.html
+++ b/views/home.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SubastasWCH - Inicio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css">
+
 </head>
 
 <body class="bg-light">
@@ -42,12 +44,12 @@
           const card = document.createElement('div');
           card.className = 'col-md-4';
           card.innerHTML = `
-            <div class="card h-100 shadow">
+            <div class="card card-altura-fija shadow">
               <div class="card-body">
 <img src="/uploads/${p.imagen}" class="img-fluid mb-3 img-cuadrada" alt="Producto" />
 
                 <h5 class="card-title text-primary">${p.nombre_producto}</h5>
-                <p class="card-text">${(p.descripcion_producto || '')
+                <p class="card-text descripcion-con-saltos">${(p.descripcion_producto || '')
               .split(' ')
               .slice(0, 30)
               .join(' ')
