--- a/views/producto.html
+++ b/views/producto.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Detalle del Producto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="/css/style.css" /> -->
-
-
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body class="bg-light">
@@ -33,7 +31,7 @@
                     </button>
                 </div>
 
-                <p id="descripcion" class="card-text"></p>
+                <p id="descripcion" class="card-text descripcion-con-saltos"></p>
                 <p><strong>Precio base:</strong> $<span id="precio"></span></p>
                 <p><strong>Tiempo restante:</strong> <span id="contador">Cargando...</span></p>
                 <p><strong>Oferta más alta:</strong> $<span id="oferta_maxima">0</span></p>
