--- a/views/login.html
+++ b/views/login.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-light d-flex justify-content-center align-items-center vh-100">
   <div class="card p-4 shadow" style="min-width: 300px; max-width: 400px;">
-    <h3 class="mb-3 text-center">Ingreso Subastas</h3>
+    <h3 class="mb-3 text-center">Ingreso</h3>
     <form id="formLogin">
       <div class="mb-3">
         <label for="correo" class="form-label">Correo</label>
