--- a/views/producto.html
+++ b/views/producto.html
@@ -71,6 +71,12 @@
             </div>
         </div>
     </div>
+    <!-- FOOTER -->
+    <footer class="bg-dark text-white text-center py-3 mt-5">
+        <div class="container">
+            &copy; <span id="anioActual"></span> DanielS 2025 | Subastas Internas WEG Chile | Area Operaciones
+        </div>
+    </footer>
 
 
 
