--- a/views/cambiar-password.html
+++ b/views/cambiar-password.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cambiar Contraseña</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body class="bg-light d-flex justify-content-center align-items-center vh-100">
   <div class="card p-4 shadow" style="min-width: 300px; max-width: 400px;">
     <h4 class="mb-3 text-center">Cambiar contraseña</h4>
@@ -18,7 +20,12 @@
     </form>
     <div id="mensaje" class="text-success mt-3 text-center"></div>
   </div>
-
+  <!-- FOOTER -->
+  <footer class="bg-dark text-white text-center py-3 mt-5">
+    <div class="container">
+      &copy; <span id="anioActual"></span> DanielS 2025 | Subastas Internas WEG Chile | Area Operaciones
+    </div>
+  </footer>
   <script>
     const token = window.location.pathname.split('/').pop();
 
@@ -40,4 +47,5 @@
     });
   </script>
 </body>
+
 </html>
