--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,15 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
+
+
 .img-cuadrada {
   width: 100%;
   aspect-ratio: 1 / 1;
