text cebter descripcion

--- a/views/producto.html
+++ b/views/producto.html
@@ -30,7 +30,7 @@
                 </div>
 
                 <!-- <p id="descripcion" class="card-text descripcion-con-saltos text-start"></p> -->
-                <div id="descripcion" class="card-text descripcion-con-saltos text-start"></div>
+                <div id="descripcion" class="card-text descripcion-con-saltos"></div>
                 <p><strong>Precio base:</strong> $<span id="precio"></span></p>
                 <p><strong>Tiempo restante:</strong> <span id="contador">Cargando...</span></p>
                 <p><strong>Oferta más alta:</strong> $<span id="oferta_maxima">Cargando...</span></p>
