--- a/views/home.html
+++ b/views/home.html
@@ -5,13 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SubastasWCH - Inicio</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="/css/style.css">
 
 </head>
 
 <body class="bg-light">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-custom">
     <div class="container">
       <a class="navbar-brand" href="home.html">Subastas WCH</a>
       <span id="usuarioActivo" class="navbar-text text-light"></span>
@@ -24,13 +26,22 @@
   </nav>
 
   <main class="container my-5">
-    <h2 class="mb-4 text-center">Productos disponibles</h2>
+    <!-- <h2 class="mb-4 text-center">Productos disponibles</h2> -->
+    <div class="text-center mb-4">
+      <h1 class="display-6 fw-bold d-inline-flex align-items-center gap-2">
+        <i class="bi bi-bag-heart"></i>
+        Productos disponibles
+        <span id="badgeCount" class="badge rounded-pill text-bg-primary ms-2">0</span>
+      </h1>
+      <p class="text-secondary mt-2 mb-0">Explora las subastas activas en este momento</p>
+    </div>
+
     <div id="contenedorProductos" class="row g-4">
       <!-- Productos aquí -->
     </div>
   </main>
   <!-- FOOTER -->
-  <footer class="bg-dark text-white text-center py-3 mt-5">
+  <footer class="bg-dark text-white text-center py-1 mt-5">
     <div class="container">
       &copy; <span id="anioActual"></span> DanielS 2025 | Subastas Internas WEG Chile | Area Operaciones
     </div>
@@ -45,6 +56,11 @@
 
         const productos = await res.json();
 
+        // Actualiza el contador del título
+        const badge = document.getElementById('badgeCount');
+        if (badge) badge.textContent = productos.length;
+
+
         const contenedor = document.getElementById('contenedorProductos');
         contenedor.innerHTML = '';
 
@@ -58,7 +74,7 @@
     <div class="card-body">
       <img src="/uploads/${imagen}" class="img-fluid mb-3 img-cuadrada" alt="Producto"
            style="cursor: pointer;" onclick="location.href='/producto.html?id=${p.id_producto}'" />
-      <h5 class="card-title text-primary">${p.nombre_producto}</h5>
+      <h5 class="card-title texto-azul-primario">${p.nombre_producto}</h5>
       <p class="card-text descripcion-con-saltos">${(p.descripcion_producto || '')
               .split(' ')
               .slice(0, 30)
