--- a/views/login.html
+++ b/views/login.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Iniciar Sesión</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="bg-light d-flex justify-content-center align-items-center vh-100">
+
+<body class="login-bg d-flex justify-content-center align-items-center vh-100">
   <div class="card p-4 shadow" style="min-width: 300px; max-width: 400px;">
-    <h3 class="mb-3 text-center">Ingreso</h3>
+
+    <!-- Logo arriba del título -->
+    <img src="images/LogoSubastasWCH.png" alt="Logo Subastas WCH" width="100"
+      class="mb-3 mx-auto d-block rounded-circle">
+
+    <h3 class="mb-3 text-center">Iniciar Sesion</h3>
     <form id="formLogin">
       <div class="mb-3">
         <label for="correo" class="form-label">Correo</label>
@@ -51,4 +60,5 @@
     });
   </script>
 </body>
+
 </html>
