--- a/views/producto.html
+++ b/views/producto.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Detalle del Producto</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body class="bg-light">
+<body class="login-bg">
 
     <main class="container py-5">
         <a href="/home.html" class="btn btn-secondary mb-3">&larr; Volver a Productos disponibles</a>
 
         <div class="card shadow">
             <div class="card-body text-center">
-                <h3 id="nombre" class="card-title text-primary"></h3>
+                <h3 id="nombre" class="card-title texto-azul-primario"></h3>
                 <div id="carouselProducto" class="carousel slide my-3" data-bs-ride="carousel">
                     <div class="carousel-inner" id="contenedorCarrusel"></div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselProducto"
@@ -35,22 +36,23 @@
                 <p><strong>Tiempo restante:</strong> <span id="contador">Cargando...</span></p>
                 <p><strong>Oferta más alta:</strong> <span id="oferta_maxima">Cargando...</span></p>
 
-                <form id="formOferta" class="mt-4">
-                    <div class="mb-3">
-                        <label for="monto" class="form-label">Tu oferta ($):</label>
-                        <input type="number" id="monto" class="form-control" required pattern="\\d*" inputmode="numeric"
-                            required min="1" max="500000" placeholder="Ingresa aqui el monto de tu oferta." />
 
+                <form id="formOferta" class="mt-4">
+                    <div class="mb-3 d-flex justify-content-center">
+                        <div class="w-50">
+                            <label for="monto" class="form-label">Tu oferta ($):</label>
+                            <input type="number" id="monto" class="form-control" required inputmode="numeric" min="1"
+                                max="500000" placeholder="Ingresa aquí el monto de tu oferta." />
+                        </div>
                     </div>
                     <button type="submit" class="btn btn-success" id="btnOfertar">
                         <span id="spinner" class="spinner-border spinner-border-sm d-none me-2" role="status"
                             aria-hidden="true"></span>
                         Ofertar
                     </button>
-
-                    <!-- <button type="submit" class="btn btn-success">Ofertar</button> -->
                     <div id="mensaje" class="mt-3 text-danger"></div>
                 </form>
+
             </div>
         </div>
     </main>
@@ -71,7 +73,7 @@
         </div>
     </div>
     <!-- FOOTER -->
-    <footer class="bg-dark text-white text-center py-3 mt-5">
+    <footer class="bg-dark text-white text-center py-1 mt-5">
         <div class="container">
             &copy; <span id="anioActual"></span> DanielS 2025 | Subastas Internas WEG Chile | Area Operaciones
         </div>
