--- a/views/producto.html
+++ b/views/producto.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <!-- <p id="descripcion" class="card-text descripcion-con-saltos text-start"></p> -->
-                <div id="descripcion" class="card-text descripcion-con-saltos"></div>
+                <div id="descripcion" class="card-text descripcion-con-saltos mx-auto mb-2" style="width:70%;"></div>
                 <p><strong>Precio base:</strong> $<span id="precio"></span></p>
                 <p><strong>Tiempo restante:</strong> <span id="contador">Cargando...</span></p>
                 <p><strong>Oferta más alta:</strong> <span id="oferta_maxima">Cargando...</span></p>
@@ -40,7 +40,7 @@
                 <form id="formOferta" class="mt-4">
                     <div class="mb-3 d-flex justify-content-center">
                         <div class="w-50">
-                            <label for="monto" class="form-label">Tu oferta ($):</label>
+                            <label for="monto" class="form-label">Ingresa tu oferta ($):</label>
                             <input type="number" id="monto" class="form-control" required inputmode="numeric" min="1"
                                 max="500000" placeholder="Ingresa aquí el monto de tu oferta." />
                         </div>
